--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('https://cdn.wallpapersafari.com/36/22/DHK4hb.jpg');
+    background-image: url('linuxbackground.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed; 
     background-size: 100% 100%;
